--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seongjoojin/epubjs-rn",
-  "version": "0.0.9",
+  "version": "0.0.91",
   "repository": "https://github.com/seongjoojin/epubjs-rn",
   "main": "./components/index.js",
   "private": false,
@@ -37,7 +37,13 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "@lightbase/react-native-orientation": "3.2.6",
+    "@react-native-community/async-storage": "^1.9.0",
+    "react-native-static-server": "0.4.2",
+    "react-native-webview": "^9.0.2",
+    "react-native-zip-archive": "^5.0.2",
+    "rn-fetch-blob": "0.12.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -54,6 +60,8 @@
     "react-test-renderer": "16.8.6"
   },
   "files": [
+    "android",
+    "ios",
     "components",
     "package.json",
     "RNEpubjs.podspec"
