--- a/EpubReader/package.json
+++ b/EpubReader/package.json
@@ -7,22 +7,13 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint .",
-    "move": "mv seongjoojin-epubjs-rn-*.tgz epubjs-rn.tgz",
-    "preinstall": "npm pack ../ && npm run move",
-    "postinstall": "rm epubjs-rn.tgz"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@lightbase/react-native-orientation": "^3.2.6",
-    "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/slider": "^2.0.9",
-    "@seongjoojin/epubjs-rn": "file:./epubjs-rn.tgz",
+    "@seongjoojin/epubjs-rn": "file:../",
     "react": "16.9.0",
-    "react-native": "0.61.5",
-    "react-native-static-server": "^0.4.2",
-    "react-native-webview": "^9.0.2",
-    "react-native-zip-archive": "^5.0.2",
-    "rn-fetch-blob": "^0.12.0"
+    "react-native": "0.61.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
