--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "path-webpack": "0.0.3",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-static-server": "0.4.2",
-    "react-native-webview": ">=9.0.2",
+    "@seongjoojin/react-native-static-server": "^0.4.31",
+    "react-native-webview": "^9.2.1",
     "react-native-zip-archive": "^5.0.2",
     "rn-fetch-blob": "0.12.0",
     "stream": "0.0.2",
@@ -40,8 +40,8 @@
     "react-native": "*",
     "@lightbase/react-native-orientation": "3.2.6",
     "@react-native-community/async-storage": "^1.9.0",
-    "react-native-static-server": "0.4.2",
-    "react-native-webview": "^9.0.2",
+    "@seongjoojin/react-native-static-server": "^0.4.31",
+    "react-native-webview": "^9.2.1",
     "react-native-zip-archive": "^5.0.2",
     "rn-fetch-blob": "0.12.0"
   },
